<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/transaction_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp">


        //Table heading

        <TableRow android:background="@color/colorGreen">

            <TextView
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:padding="10sp"
                android:text="@string/col4"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:padding="10sp"
                android:text="@string/col5"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:padding="10sp"
                android:text="@string/col6"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:padding="10sp"
                android:text="@string/col7"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:padding="10sp"
                android:text="@string/col8"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:padding="10sp"
                android:text="@string/col9"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </TableRow>

        //Table data
        <!--        <TableRow>-->
        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="4"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:padding="10sp"-->
        <!--                android:text="1234"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="14sp" />-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="4"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:padding="10sp"-->
        <!--                android:text="23"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="14sp" />-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="4"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:padding="10sp"-->
        <!--                android:text="4123"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="14sp" />-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="4"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:padding="10sp"-->
        <!--                android:text="1234"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="14sp" />-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="4"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:padding="10sp"-->
        <!--                android:text="73"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="14sp" />-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="4"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:padding="10sp"-->
        <!--                android:text="423"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="14sp" />-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="4"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:padding="10sp"-->
        <!--                android:text="623"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="14sp" />-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="4"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:padding="10sp"-->
        <!--                android:text="854"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="14sp" />-->
        <!--        </TableRow>-->

    </TableLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="328dp"
        android:text="@string/authorize_sale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/void_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/void_sale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sale_button" />

    <Button
        android:id="@+id/table_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_to_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/return_button" />

    <TextView
        android:id="@+id/textview_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="Response message will show here"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/amount_edit_text"
        app:layout_constraintTop_toTopOf="@+id/amount_edit_text" />

    <Button
        android:id="@+id/param_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/download_param"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_add_button" />

    <EditText
        android:id="@+id/amount_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/sale_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sale_amount"
        app:layout_constraintBottom_toTopOf="@+id/amount_edit_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tip_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_edit_text" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/return_sale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/void_button" />

    <Button
        android:id="@+id/summary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/batch_summary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/param_button" />

    <Button
        android:id="@+id/batch_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/batch_close"
        app:layout_constraintStart_toEndOf="@+id/summary_button"
        app:layout_constraintTop_toBottomOf="@+id/param_button" />

    <EditText
        android:id="@+id/tip_amount_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/sale_button"
        app:layout_constraintTop_toBottomOf="@+id/tip_amount_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>